# Kipp

./: .gitignore  .zenodo.json  AGENT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  MODEL_CARD.md  Makefile  README.md  REPRODUCE.md
.claude/: context.md
.cursor/commands/: nia.md
.cursor/rules/: 00-identity.mdc  10-language-and-style.mdc  20-testing-and-safety.mdc
bench/: README.md  _provenance.py  load_bench.py  ppl_bench.py  prefix_bench.py  server_bench.py  spec_bench.py
context/: phase5-research-notes.md
cuda/: kipp_kernels.cu  kipp_kernels.cuh
docs/: .nojekyll  ARCHITECTURE.md  BENCHMARKS.md  MODEL-SUPPORT.md  RELEASING.md  REPRODUCING.md  ROADMAP.md  architecture.html  benchmarks.html  contributing.html  index.html  model-support.html  releasing.html  reproducing.html  roadmap.html
examples/: README.md
metal/: kipp_kernels.metal
paper/: Makefile  README.md  SUBMITTING.md  main.tex  references.bib
src/: kipp.c  kipp.h  kipp_backend.h  kipp_chat.c  kipp_chat.h  kipp_checkpoints.h  kipp_cli.c  kipp_http.c  kipp_http.h  kipp_json.c  kipp_json.h  kipp_kv_pool.c  kipp_kv_pool.h  kipp_server.c  kipp_spec.c  kipp_spec.h  kipp_unicode.inc
tests/: kipp_test.c  test_server.py  test_tooling.py
tools/: bench.py  checkpoints.py  convert_to_gguf.py  download_model.py  download_model.sh  embed_metal_source.py  generate_chat_vectors.py  generate_test_vectors.py  generate_unicode_tables.py  paper_data.py  prepare_wikitext.py  pyproject.toml  render_docs.py
tools/docs/: page.html
tools/ops/: collect_cuda_gates.py  verda_cuda_gate.sh
(+55 files in other folders)
