[project]
name = "kipp-tools"
version = "0.1.0"
description = "Tooling-only dependencies for Kipp model preparation"
requires-python = ">=3.12,<3.14"
dependencies = [
    "huggingface-hub>=0.33",
    "numpy>=2.2",
    "safetensors>=0.5",
    "torch>=2.7",
    "transformers>=4.51",
]

[tool.uv]
package = false
